Pari: plafond dynamique (50% cash, cap 1G) + doc OpenAPI
